Improved drawer menu

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,5 +1,9 @@
-.header-expanded {
-  width: 100%;
-  background-color: transparent !important;
-  box-shadow: none !important;
+.major-toolbar {
+  padding: 0 !important;
+
+  .header-expanded {
+    width: 100%;
+    background-color: transparent !important;
+    box-shadow: none !important;
+  }
 }
