--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,3 +1,8 @@
-.major-toolbar {
-  padding: 0 !important;
+header {
+  left: 0 !important;
+  margin-left: 72px;
+
+  .major-toolbar {
+    padding: 0 !important;
+  }
 }
