--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -1,7 +1,15 @@
 .app-main {
   background-image: url('../../images/background.png');
+  flex-grow: 1;
 
   &.app-main-dark {
     background-color: #545454 !important;
+  }
+
+  .app-main-toolbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 8px;
   }
 }
