--- a/src/index.scss
+++ b/src/index.scss
@@ -9,5 +9,11 @@ body {
 }
 
 .success-text {
-  color: #00ff39 !important;
+  &.text-dark {
+    color: #00ff39 !important;
+  }
+
+  &.text-light {
+    color: #004ad6de !important;
+  }
 }
